--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -3,8 +3,8 @@ http://localhost {
     respond "Access denied" 403
 }
 
-# HTTPS를 통한 app 접근만 허용 (포트 5173에서만 서비스)
+# HTTPS를 통한 frontend 접근만 허용 (포트 5173에서만 서비스)
 https://localhost:5173 {
-    reverse_proxy app:5173
+    reverse_proxy frontend:5173
     tls /etc/caddy/certs/server.crt /etc/caddy/private/server_pkey.pem
 }
